--- a/layout/activity_create.xml
+++ b/layout/activity_create.xml
@@ -54,6 +54,8 @@
 
     <Button
         android:id="@+id/button3"
+        android:background="@drawable/button_main"
+        android:textSize="22dp"
         android:layout_width="353dp"
         android:layout_height="67dp"
         android:text="Create Account"
