--- a/layout/activity_main.xml
+++ b/layout/activity_main.xml
@@ -57,6 +57,8 @@
 
     <Button
         android:id="@+id/button"
+        android:background="@drawable/button_main"
+        android:textSize="22dp"
         android:layout_width="348dp"
         android:layout_height="70dp"
         android:text="Create an account"
@@ -68,6 +70,8 @@
 
     <Button
         android:id="@+id/button2"
+        android:background="@drawable/button_main"
+        android:textSize="22dp"
         android:layout_width="348dp"
         android:layout_height="70dp"
         android:text="Login"
