--- a/layout/activity_home.xml
+++ b/layout/activity_home.xml
@@ -7,6 +7,61 @@
     android:layout_height="match_parent"
     tools:context=".home">
 
+    <Button
+        android:id="@+id/button19"
+        android:layout_width="51dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#61A0FF"
+        android:text="-"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.208"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
+
+    <TextView
+        android:id="@+id/textView23"
+        android:layout_width="333dp"
+        android:layout_height="177dp"
+        android:background="@drawable/info_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.371"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.227" />
+
+    <TextView
+        android:id="@+id/textView20"
+        android:layout_width="122dp"
+        android:layout_height="47dp"
+        android:background="@drawable/info_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.538" />
+
+    <Button
+        android:id="@+id/button16"
+        android:layout_width="127dp"
+        android:layout_height="47dp"
+        android:text="TOYS"
+        tools:layout_editor_absoluteX="213dp"
+        tools:layout_editor_absoluteY="138dp" />
+
+    <Button
+        android:id="@+id/button17"
+        android:layout_width="127dp"
+        android:layout_height="47dp"
+        android:text="Food"
+        tools:layout_editor_absoluteX="51dp"
+        tools:layout_editor_absoluteY="138dp" />
+
     <TextView
         android:id="@+id/textView"
         android:layout_width="240dp"
@@ -74,28 +129,99 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="353dp"
-        android:layout_height="67dp"
+        android:layout_width="344dp"
+        android:layout_height="54dp"
         android:background="@drawable/button_main"
         android:text="Donate"
         android:textColor="#FFFFFF"
         android:textSize="22dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.753" />
+        app:layout_constraintVertical_bias="0.787" />
 
-    <ImageView
-        android:id="@+id/imageView3"
+    <TextView
+        android:id="@+id/textView19"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="What to donate?"
+        android:textColor="#000000"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.109"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.372"
-        app:srcCompat="@drawable/Logo" />
+        app:layout_constraintVertical_bias="0.119" />
+
+    <TextView
+        android:id="@+id/textView22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Quantity"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.109"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.453" />
+
+    <Button
+        android:id="@+id/button15"
+        android:layout_width="127dp"
+        android:layout_height="47dp"
+        android:text="School Supplies"
+        android:textSize="12sp"
+        tools:layout_editor_absoluteX="213dp"
+        tools:layout_editor_absoluteY="196dp" />
+
+    <Button
+        android:id="@+id/button11"
+        android:layout_width="127dp"
+        android:layout_height="47dp"
+        android:text="Clothes"
+        tools:layout_editor_absoluteX="51dp"
+        tools:layout_editor_absoluteY="196dp" />
+
+    <EditText
+        android:id="@+id/editTextText2"
+        android:layout_width="278dp"
+        android:layout_height="40dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Others"
+        tools:layout_editor_absoluteX="55dp"
+        tools:layout_editor_absoluteY="253dp" />
+
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="104dp"
+        android:layout_height="39dp"
+        android:gravity="center"
+        android:text="1"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/textView20"
+        app:layout_constraintEnd_toEndOf="@+id/textView20"
+        app:layout_constraintStart_toStartOf="@+id/textView20"
+        app:layout_constraintTop_toTopOf="@+id/textView20" />
+
+    <Button
+        android:id="@+id/button18"
+        android:layout_width="51dp"
+        android:layout_height="45dp"
+        android:backgroundTint="#61A0FF"
+        android:text="+"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.802"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.539" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
